
  - support custom item type `fscores()` computations when `response.pattern`
  is passed instead of the original data

  - `impute` option for `itemfit()` and `M2()` to estimate statistics via
  plausible imputation when missing data are present

  - multidimensional ideal-point models added for dichotomous items

  - M2* statistic added for polytomous item types

BUG FIXES

  - large bias correction in information matrix and standard errors for
  models that contain equality constraints (standard errors were too high)

  - drop dimensions fix for nested logit models

Changes in mirt 1.3

MAJOR CHANGES

  - default `SE.type` changed to `crossprod` since it is better at detecting
  when models are not identified compared to `SEM`, and is generally much
  cheaper to compute for larger models

  - M-step optimizer now automatically selected to be 'BFGS' if there are
  no bounded parameters, and 'L-BFGS-B' otherwise. Some models will have
  notably different parameter estimates because of this, but should have
  nearly identical model log-likelihoods

  - better shiny UI which adapts to the itemtype specifically, and allows
  for classical parameter inputs (special thanks to Jonathan Lehrfeld for
  providing code that inspired both these changes)

  - scores.only option now set to `TRUE` in `fscores()`

  - `type = 'score'` for plot generics no longer adjusts the categories for
  expected test scores

  - M-step optimizer in EM now deters out-of-order graded response model
  intercepts (was a problem if the startvalues were too far from the ML
  estimate in graded models)

NEW FEATURES

  - `return.acov` logical added to `fscores()` to return a list of matrices
  containing the ACOV theta values used to compute the SEs (suggested by
  Shiyang Su)

  - `printCI` logical option to `summary()` to print confidence intervals
  for standardized loadings

  - new `expected.test()` function, which is an extension of `expected.item()`
  but for the whole test
