@@ -1,45 +1,5 @@
 SE.BL <- function(pars, Theta, theta, prior, BFACTOR, itemloc, PrepList, ESTIMATE, constrain, Ls,
                   CUSTOM.IND, specific=NULL, sitems=NULL, EH = FALSE, EHPrior = NULL, warn, Data){
-    LL <- function(p, est, longpars, pars, ngroups, J, Theta, PrepList, specific, sitems,
-                   CUSTOM.IND, EH, EHPrior, Data){
-        longpars[est] <- p
-        pars2 <- reloadPars(longpars=longpars, pars=pars, ngroups=ngroups, J=J)
-        gstructgrouppars <- prior <- Prior <- vector('list', ngroups)
-        if(EH){
-            Prior[[1L]] <- EHPrior[[1L]]
-        } else {
-            for(g in 1L:ngroups){
-                gstructgrouppars[[g]] <- ExtractGroupPars(pars2[[g]][[J+1L]])
-                if(BFACTOR){
-                    prior[[g]] <- dnorm(theta, 0, 1)
-                    prior[[g]] <- prior[[g]]/sum(prior[[g]])
-                    Prior[[g]] <- apply(expand.grid(prior[[g]], prior[[g]]), 1L, prod)
-                    next
-                }
-                Prior[[g]] <- mirt_dmvnorm(Theta,gstructgrouppars[[g]]$gmeans,
-                                               gstructgrouppars[[g]]$gcov)
-                Prior[[g]] <- Prior[[g]]/sum(Prior[[g]])
-            }
-        }
-        LL <- 0
-        for(g in 1L:ngroups){
-            if(BFACTOR){
-                expected <- Estep.bfactor(pars=pars2[[g]], 
-                                          tabdata=Data$tabdatalong, freq=Data$Freq[[g]],
-                                          Theta=Theta, prior=prior[[g]],
-                                          specific=specific, sitems=sitems,
-                                          itemloc=itemloc, CUSTOM.IND=CUSTOM.IND)$expected
-            } else {
-                expected <- Estep.mirt(pars=pars2[[g]], 
-                                       tabdata=Data$tabdatalong, freq=Data$Freq[[g]],
-                                       Theta=Theta, prior=Prior[[g]], itemloc=itemloc,
-                                       CUSTOM.IND=CUSTOM.IND)$expected
-            }
-            LL <- LL + sum(Data$Freq[[g]] * log(expected))
-        }
-        LL
-    }
-
     longpars <- ESTIMATE$longpars
     rlist <- ESTIMATE$rlist
     infological=ESTIMATE$infological
@@ -59,9 +19,9 @@ SE.BL <- function(pars, Theta, theta, prior, BFACTOR, itemloc, PrepList, ESTIMAT
             pars[[g]][[i]]@dat <- rlist[[g]]$r1[, tmp]
         }
     }
-    hess <- numDeriv::hessian(LL, x=shortpars, est=est, longpars=longpars,
-                              pars=pars, ngroups=ngroups, J=J,
-                              Theta=Theta, PrepList=PrepList,
+    hess <- numDeriv::hessian(BL.LL, x=shortpars, est=est, longpars=longpars,
+                              pars=pars, ngroups=ngroups, J=J, itemloc=itemloc,
+                              Theta=Theta, PrepList=PrepList, BFACTOR=BFACTOR,
                               specific=specific, sitems=sitems, CUSTOM.IND=CUSTOM.IND,
                               EH=EH, EHPrior=EHPrior, Data=Data)
     Hess <- matrix(0, length(longpars), length(longpars))
